# FullCycle

./: docker-compose.yaml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py
backend/app/: __init__.py  main.py
backend/app/core/: database.py
backend/app/db/: deps.py  session.py
backend/app/infraestructure/aws/: message_schema.py  s3_client.py  sqs_client.py
backend/app/interfaces/http/: api.py
backend/app/interfaces/http/routes/: invoice.py
backend/app/models/: user.py
backend/app/repositories/: user_repository.py
backend/app/routes/: user_routes.py
backend/app/schemas/: user_schema.py
backend/app/services/: user_service.py
docs/: architecture_target.md
worker/: Dockerfile  worker.py
worker/application/: categorize_transaction.py  process_invoice.py  process_whatsapp_message.py
worker/domain/: transaction.py
worker/infrastructure/aws/: bedrock_service.py  message_schema.py  s3_service.py
worker/infrastructure/database/: models.py
worker/infrastructure/message/: message_service.py
worker/infrastructure/pdf/: pdf_service.py
worker/repositories/: category_rule_repository.py  processing_status_repository.py  transaction_repository.py
worker/support/: get_other_category_id.py
