[project]
name = "fullcycle-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitinho",email = "vitorcbs18@gmail.com"}
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115"
uvicorn = "^0.30"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.13"
boto3 = "^1.34"
pdfplumber = "^0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
